[gd_scene load_steps=7 format=3 uid="uid://cpk07gb6tihta"]

[ext_resource type="Script" path="res://scripts/UI/CameraHUD.gd" id="1_tsblq"]
[ext_resource type="FontFile" uid="uid://bvkchf3861yu8" path="res://assets/fonts/m5x7.ttf" id="2_4cuh6"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fsukx"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_g14wp"]
bg_color = Color(0.243137, 0.639216, 0.870588, 1)

[sub_resource type="Theme" id="Theme_rax2a"]
ProgressBar/styles/background = SubResource("StyleBoxFlat_fsukx")
ProgressBar/styles/fill = SubResource("StyleBoxFlat_g14wp")

[sub_resource type="Theme" id="Theme_l7qc3"]
default_font = ExtResource("2_4cuh6")
default_font_size = 50

[node name="CameraHUD" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_tsblq")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="UI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="UI/MarginContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="Experience" type="ProgressBar" parent="UI/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
theme = SubResource("Theme_rax2a")
value = 69.0
show_percentage = false

[node name="HBoxContainer" type="HBoxContainer" parent="UI/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0

[node name="Timer" type="Label" parent="UI/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_l7qc3")
text = "21:37"

[node name="HBoxContainer2" type="HBoxContainer" parent="UI/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8

[node name="PauseButton" type="Button" parent="UI/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "pauza"

[node name="UpgradeUI" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="UpgradeUI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 100

[node name="ColorRect" type="ColorRect" parent="UpgradeUI/MarginContainer"]
layout_mode = 2
color = Color(0.156863, 0.156863, 0.156863, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="UpgradeUI/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="UpgradeUI/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Upgrade1" type="Button" parent="UpgradeUI/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="UpgradeUI/MarginContainer/VBoxContainer/HBoxContainer/Upgrade1"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="UpgradeUI/MarginContainer/VBoxContainer/HBoxContainer/Upgrade1/HBoxContainer"]
layout_mode = 2
text = "upgrade 1 title"

[node name="DescLabel" type="Label" parent="UpgradeUI/MarginContainer/VBoxContainer/HBoxContainer/Upgrade1/HBoxContainer"]
layout_mode = 2
text = "upgrade 1 description"

[node name="HBoxContainer2" type="HBoxContainer" parent="UpgradeUI/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Upgrade2" type="Button" parent="UpgradeUI/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="UpgradeUI/MarginContainer/VBoxContainer/HBoxContainer2/Upgrade2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="UpgradeUI/MarginContainer/VBoxContainer/HBoxContainer2/Upgrade2/HBoxContainer"]
layout_mode = 2
text = "upgrade 2 title"

[node name="DescLabel" type="Label" parent="UpgradeUI/MarginContainer/VBoxContainer/HBoxContainer2/Upgrade2/HBoxContainer"]
layout_mode = 2
text = "upgrade 2 description"

[node name="HBoxContainer3" type="HBoxContainer" parent="UpgradeUI/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Upgrade3" type="Button" parent="UpgradeUI/MarginContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="UpgradeUI/MarginContainer/VBoxContainer/HBoxContainer3/Upgrade3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="UpgradeUI/MarginContainer/VBoxContainer/HBoxContainer3/Upgrade3/HBoxContainer"]
layout_mode = 2
text = "upgrade 3 title"

[node name="DescLabel" type="Label" parent="UpgradeUI/MarginContainer/VBoxContainer/HBoxContainer3/Upgrade3/HBoxContainer"]
layout_mode = 2
text = "upgrade 3 description"

[node name="HBoxContainer4" type="HBoxContainer" parent="UpgradeUI/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Upgrade4" type="Button" parent="UpgradeUI/MarginContainer/VBoxContainer/HBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="UpgradeUI/MarginContainer/VBoxContainer/HBoxContainer4/Upgrade4"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="UpgradeUI/MarginContainer/VBoxContainer/HBoxContainer4/Upgrade4/HBoxContainer"]
layout_mode = 2
text = "upgrade 4 title"

[node name="DescLabel" type="Label" parent="UpgradeUI/MarginContainer/VBoxContainer/HBoxContainer4/Upgrade4/HBoxContainer"]
layout_mode = 2
text = "upgrade 4 description"

[connection signal="pressed" from="UI/MarginContainer/VBoxContainer/HBoxContainer2/PauseButton" to="." method="_on_pause_button_pressed"]
